# flow-pomodoro

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Changelog  FAQ  README  README.md  TODO  bar-descriptor-blackberry.xml  bar-descriptor.xml  build-android.sh  build-blackberry.sh  build-playbook.sh  code.dev.code-workspace  flow.desktop  flow.pro  flow.rc  global.pri
android/: AndroidManifest.xml
android/src/com/kdab/flowpomodoro/: MainActivity.java
config.tests/qwebdavlib/: main.cpp  qwebdavlib.pro
distros/archlinux/: PKGBUILD
plugins/: CMakeLists.txt  plugins.pri  plugins.pro
plugins/distractions/: CMakeLists.txt  distractions.pri  distractions.pro
plugins/distractions/hosts/: CMakeLists.txt  Config.qml  hosts.cpp  hosts.h  hosts.pro
plugins/distractions/kmail/: kmail.cpp  kmail.h  kmail.pro
plugins/distractions/pidgin/: pidgin.cpp  pidgin.h  pidgin.pro
plugins/distractions/shellscript/: CMakeLists.txt  Config.qml  script_template.sh  shellscript.cpp  shellscript.h  shellscript.pro
plugins/hosts/: CMakeLists.txt  Config.qml  hosts.cpp  hosts.h  hosts.pro  hostsplugin.qrc  resources.qrc
plugins/kmail/: CMakeLists.txt  README  kmail.cpp  kmail.h  kmail.pro
plugins/pidgin/: CMakeLists.txt  README  pidgin.cpp  pidgin.h  pidgin.pro
plugins/shellscript/: CMakeLists.txt  Config.qml  resources.qrc  script_template.bat  shellscript.cpp  shellscript.h  shellscript.pro
scripts/: build-mingw.sh  build-osx.sh  build_all.sh  mingw-deploy.sh  osx-deploy.sh
scripts/git-hooks/: pre-commit
src/: CMakeLists.txt  archivedtasksfiltermodel.cpp  archivedtasksfiltermodel.h  calendarcontroller.cpp  calendarcontroller.h  checkabletagmodel.cpp  checkabletagmodel.h  checkbox.cpp  checkbox.h  circularprogressindicator.cpp  circularprogressindicator.h  controller.cpp  controller.h  duedate.cpp  duedate.h  extendedtagsmodel.cpp  extendedtagsmodel.h  filedownloader.cpp  filedownloader.h  flow_version.h  generate_version.h  generate_version.sh  genericlistmodel.h  gitupdater.cpp  gitupdater.h  gitutils.cpp  gitutils.h  imageprovider.cpp  imageprovider.h  jsonstorage.cpp  jsonstorage.h  kernel.cpp  kernel.h  loadmanager.cpp  loadmanager.h  main.cpp  nonemptytagfilterproxy.cpp  nonemptytagfilterproxy.h  plugininterface.h  pluginmodel.cpp  (+58 more)
src/android/: AndroidManifest.xml
src/dbus/: flow.cpp  flow.h
src/img/: README  icon.icns
src/qml/: AboutPage.qml  Calendar.qml  Choice.qml  ChoicePopup.qml  ClickableImage.qml  ConfigurePage.qml  DecentTabView.qml  DefaultStyle.js  DefaultStyle.qml  FlowCheckBox.qml  FlowCircularProgressIndicator.qml  FlowScrollBar.qml  FlowSwitch.qml  FontAwesomeIcon.qml  GlobalContextMenu.qml  InputPopup.qml  LoadingScreen.qml  Main.qml  MainDesktop.qml  MainMobile.qml  MainPage.qml  MessagePopup.qml  MobileButton.qml  MobileChoicePopup.qml  MobileMenuBar.qml  MobileOptionsContextMenu.qml  MobileOptionsContextMenuItem.qml  MobileStyle.qml  MobileTabView.qml  ModalDialog.qml  NewTagDialog.qml  Overlay.qml  Page.qml  PomodoroOverlay.qml  Popup.qml  PushButton.qml  QuestionPopup.qml  RegularText.qml  SmallText.qml  SmallText2.qml  (+14 more)
src/qml/config/: General.qml  Hacking.qml  Plugins.qml  Tag.qml  Tags.qml  WebDavSync.qml
src/translations/: flow_pt_PT.qm  flow_pt_PT.ts
tests/: assertingproxymodel.cpp  assertingproxymodel.h  main.cpp  modelsignalspy.cpp  modelsignalspy.h  signalspy.cpp  signalspy.h  testarchivedtasksmodel.cpp  testarchivedtasksmodel.h  testbase.cpp  testbase.h  testcheckabletagmodel.cpp  testcheckabletagmodel.h  testduedate.cpp  testduedate.h  testgitutils.cpp  testgitutils.h  tests.cpp  tests.h  tests.pro  teststagedtasksmodel.cpp  teststagedtasksmodel.h  teststorage.cpp  teststorage.h  testtag.cpp  testtag.h  testtagmodel.cpp  testtagmodel.h  testtask.cpp  testtask.h  testtaskfiltermodel.cpp  testtaskfiltermodel.h  testwebdav.cpp  testwebdav.h  version.h
tests/quick/: testui.cpp  testui.h
